# cos-600-cycleshooter

./: .gitignore  .gitmodules  .ycm_extra_conf.py  51-cycleshooter-udev.rules  CMakeLists.txt  CMakeLists.txt.user.b2ce2d6  README.md
assets/media/fonts/: BerlinSans32.fontdef  Cycleshooter.fontdef
assets/media/materials/scripts/: Cycleshooter.material  Cycleshooter.overlay  Examples.material  bullet.mesh.material
assets/media/models/: bullet.mesh
assets/media/scripts/: Cycleshooter.material  Cycleshooter.overlay
helpers/: Makefile
src/: BaseApplication.cpp  OgreBulletIntrospection.cpp  OgreBulletIntrospection.h  TutorialApplication.cpp  TutorialApplication.h  scaffold.sh
src/include/: AbstractPolar.hpp  AudioManager.hpp  BaseApplication.hpp  BulletElement.hpp  CollisionHandler.hpp  Constants.hpp  Context.hpp  ContextInput.hpp  ContextManager.hpp  Controller.hpp  CrosshairManager.hpp  CycleshooterIcon.hpp  CycleshooterSpline.hpp  DummyPolar.hpp  GameLogic.hpp  HUD.hpp  InputManager.hpp  LogicManager.hpp  Monster.hpp  NodeManager.hpp  PathManager.hpp  Player.hpp  Player.hpp.autosave  Polar.hpp  PoligonalPathManager.hpp  Resources.hpp  SdkTrays.hpp  SpeedController.hpp  TerrainManager.hpp
src/include/Bicycle/: AbstractBicycle.hpp  ConstantBicycle.hpp  RealBicycle.hpp
src/include/Logic/: LogicManager.hpp  Monster.hpp  Player.hpp
src/include/Polar/: AbstractPolar.hpp  ConstantPolar.hpp  DummyConstantPolar.hpp  DummyPolar.hpp  Polar.hpp  RandomPolar.hpp  RealPolar.hpp
src/include/Simple/: Context.hpp  CycleshooterIcon.hpp  Logging.hpp
src/include/Singleton/: AudioManager.hpp  ConfigManager.hpp  InputManager.hpp  Randomness.hpp  Singleton.hpp  TextManager.hpp
src/lib/: myfeature.cpp  myfeature.h
src/src/: AbstractPolar.cpp  AudioManager.cpp  BaseApplication.cpp  BaseApplication.hpp  BulletElement.cpp  CollisionHandler.cpp  ContextManager.cpp  Controller.cpp  CrosshairManager.cpp  Cycleshooter.cpp  CycleshooterSpline.cpp  DummyPolar.cpp  GameLogic.cpp  HUD.cpp  InputManager.cpp  LogicManager.cpp  Monster.cpp  NodeManager.cpp  PathManager.cpp  Player.cpp  Polar.cpp  PoligonalPathManager.cpp  Resources.cpp  TerrainManager.cpp  TutorialApplication.cpp  TutorialApplication.hpp
src/src/Logic/: LogicManager.cpp  Player.cpp
src/src/Polar/: AbstractPolar.cpp  ConstantPolar.cpp  DummyConstantPolar.cpp  DummyPolar.cpp  Polar.cpp  RandomPolar.cpp  RealPolar.cpp
src/src/Singleton/: AudioManager.cpp  ConfigManager.cpp  InputManager.cpp  Randomness.cpp  TextManager.cpp
tests/: sampleTest.cpp
